--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.footer-inner {
+  background: url('/images/footer-icon.webp') no-repeat;
+  background-position: bottom right;
+}
