--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
 @layer base {
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
+    font-weight: 400 !important;
   }
   p, b, span {
     font-family: "Inter", sans-serif;
@@ -51,9 +52,9 @@ body {
   .items-inherit {
     align-items: inherit;
   }
-  .salary-guide-inner {
+  /* .salary-guide-inner {
     background: url('/images/Salary-Guide-banner-05.webp') no-repeat;
-  }
+  } */
 }
 .items-inherit{
   align-items: inherit;
