--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,7 @@ header.w-full.flex.items-center.justify-between.px-4.sm\:px-6.lg\:px-6.py-4.bg-w
 }
 
 .hero-section {
-  background: url('/images/mobile-hero.png') no-repeat;
+  background: url('/images/mobile-hero-op.png') no-repeat;
 }
 
 @media only screen and (min-width: 640px) {
